4471.   [cleanup]       Revert a query logging change inadvertently
			backported from 9.11. [RT #43238]

4467.	[security]	It was possible to trigger an assertion when
			rendering a message. (CVE-2016-2776) [RT #43139]

4466.	[bug]		Interface scanning didn't work on a Windows system
			without a non local IPv6 addresses. [RT #43130]

4464.	[bug]		Fix windows python support. [RT #43173]

4461.	[bug]		win32: not all external data was properly marked
			as external data for windows dll. [RT #43161]

4458.	[cleanup]	Update assertions to be more correct, and also remove
			use of a reserved word. [RT #43090]

4457.	[maint]		Added AAAA (2001:500:a8::e) for E.ROOT-SERVERS.NET.

4456.	[doc]		Add DOCTYPE and lang attribute to <html> tags.
			[RT #42587]

4448.	[bug]		win32: ::1 was not being found when iterating
			interfaces. [RT #42993]

4445.	[cleanup]	isc_errno_toresult() can now be used to call the
			formerly private function isc__errno2result().
			[RT #43050]

4443.	[func]		Set TCP_MAXSEG in addition to IPV6_USE_MIN_MTU on
			TCP sockets. [RT #42864]

4441.	[cleanup]	Alphabetize host's help output. [RT #43031]

4433.	[cleanup]	Report an error when passing an invalid option or
			view name to "rndc dumpdb". [RT #42958]

4432.	[test]		Hide rndc output on expected failures in logfileconfig
			system test. [RT #27996]

4431.	[bug]		named-checkconf now checks the rate-limit clause.
			[RT #42970]

4430.	[bug]		Lwresd died if a search list was not defined.
			Found by 0x710DDDD At Alibaba Security. [RT #42895]

4425.	[bug]		arpaname was not being installed into ${prefix}/bin.
			RT #42910]

4423.	[maint]		Added missing IPv6 address 2001:500:84::b for
			B.ROOT-SERVERS.NET. [RT #42898]

4422.	[port]		Silence clang warnings in dig.c and dighost.c.
			[RT #42451]

4418.	[bug]		Fix a compiler warning in GSSAPI code. [RT #42879]

4414.	[bug]		Corrected a bug in the MIPS implementation of
			isc_atomic_xadd(). [RT #41965]
