@@ -1,4 +1,9 @@
-4471.   [cleanup]       Revert a query logging change inadvertently
+4472.	[bug]		Named could fail to find the correct NSEC3 records when
+			a zone was updated between looking for the answer and
+			looking for the NSEC3 records proving non-existance
+			of the answer. [RT #43247]
+
+4471.	[cleanup]	Revert a query logging change inadvertently
 			backported from 9.11. [RT #43238]
 
 4467.	[security]	It was possible to trigger an assertion when
